Fixed a couple bugs on mobile and did some slight reorganization of props. The audio media progress bar drag feature does not currently work on mobile. I have to look into that.

--- a/react-web/src/less/main.less
+++ b/react-web/src/less/main.less
@@ -14,7 +14,7 @@
 
 // Make sure the root takes up the full height of the screen
 #root {
-    height: 100vh;
+    height: 100dvh;
     
     display: flex;
     flex-direction: column;
